--- a/cored/config.yml
+++ b/cored/config.yml
@@ -1,3 +1,6 @@
+# This file is used by `ignite chain serve` command. It will be removed once we configure and start chains
+# ourselves. We won't use `ignite` to do that because it's still slow and generates a lot of mess.
+
 accounts:
   - name: alice
     coins: ["20000token", "200000000stake"]
