Remove target `direct`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Lint, run unit tests and build
         run: core lint test build
       - name: Execute integration tests
-        run: coreznet test --target=direct
+        run: coreznet test --target=docker
