--- a/.github/ISSUE_TEMPLATE/bug-report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yaml
@@ -13,6 +13,13 @@ body:
       required: true
 
   - type: textarea
+    id: expected
+    attributes:
+      label: What did you expect to happen?
+    validations:
+      required: true
+
+  - type: textarea
     id: reproduction
     attributes:
       label: Steps to reproduce the behavior (as precisely as possible)
