--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,7 @@ jobs:
         run: |
           cd ..
           git clone https://github.com/CoreumFoundation/crust.git 
+          git checkout origin/begmaroman/update-coreum-version
           echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: Lint, run unit tests and build
         run: crust lint test build --log-format=yaml
