--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Set up crust
         run: |
           cd ..
-          git clone -b begmaroman/update-coreum-version https://github.com/CoreumFoundation/crust.git 
+          git clone https://github.com/CoreumFoundation/crust.git 
           echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: Lint, run unit tests and build
         run: crust lint test build --log-format=yaml
