Added pipeline to run linter

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,11 @@ jobs:
           cd ..
           git clone https://github.com/CoreumFoundation/crust.git 
           echo "$(pwd)/crust/bin" >> $GITHUB_PATH
-      - name: Lint, run unit tests and build
-        run: crust lint test build --log-format=yaml
+      - name: Lint
+        run: crust lint --log-format=yaml
+      - name: Build
+        run: crust build --log-format=yaml
+      - name: Unit testing
+        run: crust test --log-format=yaml
       - name: Execute integration tests
         run: crust znet test --log-format=yaml
