--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           persist-credentials: false
+      - name: Cache Primes
+        id: cache-primes
+        uses: actions/cache@v3
+        with:
+          path: golangci-lint-cache
+          key: ${{ runner.os }}-golangci-lint-cache
       - name: Go version used to build crust tool
         run: go version
       - name: Set up crust
@@ -21,7 +27,10 @@ jobs:
           git clone https://github.com/CoreumFoundation/crust.git 
           echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: Lint
-        run: crust lint --log-format=yaml
+        run: |
+          export GOLANGCI_LINT_CACHE=golangci-lint-cache
+          crust lint --log-format=yaml
+          golangci-lint cache status
       - name: Build
         run: crust build --log-format=yaml
       - name: Unit testing
