--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,11 +13,14 @@ jobs:
       - uses: actions/checkout@v3
         with:
           persist-credentials: false
-      - name: Cache Primes
-        id: cache-primes
+      - name: Cache
+        id: cache
         uses: actions/cache@v3
         with:
-          path: golangci-lint-cache
+          path: |
+            ~/.cache/go-build
+            ~/.cache/golangci-lint
+            ~/go/pkg/mod
           key: ${{ runner.os }}-golangci-lint-cache
       - name: Go version used to build crust tool
         run: go version
@@ -28,9 +31,9 @@ jobs:
           echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: Lint
         run: |
+          golangci-lint cache status
           export GOLANGCI_LINT_CACHE=golangci-lint-cache
           crust lint --log-format=yaml
-          golangci-lint cache status
       - name: Build
         run: crust build --log-format=yaml
       - name: Unit testing
