--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           persist-credentials: false
+      #- uses: actions/checkout@v3
+      #  with:
+      #    name: CoreumFoundation/crust
       - name: Cache
         id: cache
         uses: actions/cache@v3
@@ -21,7 +24,7 @@ jobs:
             ~/.cache/go-build
             ~/.cache/golangci-lint
             ~/go/pkg/mod
-          key: ${{ runner.os }}-golangci-lint-cache
+          key: ${{ runner.os }}-ci-cache
       - name: Go version used to build crust tool
         run: go version
       - name: Set up crust
@@ -29,6 +32,7 @@ jobs:
           cd ..
           git clone https://github.com/CoreumFoundation/crust.git 
           echo "$(pwd)/crust/bin" >> $GITHUB_PATH
+          ls $(pwd)/crust/bin
           $(pwd)/crust/bin/golangci-lint cache status
       - name: Lint
         run: |
