--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,11 @@ jobs:
             ~/go/pkg
           key: ${{ runner.os }}-ci-cache
       - name: Set up crust
-        run: cd .. && echo "$(pwd)/crust/bin" >> $GITHUB_PATH
+        run: |
+          echo $pwd
+          cd .. 
+          ls $(pwd)/crust/bin
+          echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: Lint
         run: |
           export GOLANGCI_LINT_CACHE=$HOME/.cache/golangci-lint
