--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Checkout crust
         uses: actions/checkout@v3
         with:
-          name: CoreumFoundation/crust
+          repository: CoreumFoundation/crust
       - name: Set up cache
         id: cache
         uses: actions/cache@v3
