--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           persist-credentials: false
+          path: coreum
       - name: Checkout crust
         uses: actions/checkout@v3
         with:
           repository: CoreumFoundation/crust
+          path: crust
       - name: Set up cache
         id: cache
         uses: actions/cache@v3
