--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   ci:
     runs-on: ubuntu-22.04
+    env:
+      GOLANGCI_LINT_CACHE: $(HOME)/.cache/golangci-lint
     steps:
       - name: Go version used to build crust tool
         run: go version
@@ -34,9 +36,7 @@ jobs:
       - name: Set up crust
         run: echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: Lint
-        run: |
-          export GOLANGCI_LINT_CACHE=$HOME/.cache/golangci-lint
-          crust lint --log-format=yaml
+        run: crust lint --log-format=yaml
       - name: Build
         run: crust build --log-format=yaml
       - name: Unit testing
