--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,6 @@ on:
 jobs:
   ci:
     runs-on: ubuntu-22.04
-    env:
-      GOLANGCI_LINT_CACHE: $HOME/.cache/golangci-lint
     steps:
       - name: Go version used to build crust tool
         run: go version
@@ -29,16 +27,14 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/.cache/go-build
-            ~/.cache/golangci-lint
-            ~/go/pkg
+            $HOME/.cache/go-build
+            $HOME/.cache/golangci-lint
+            $HOME/go/pkg
           key: ${{ runner.os }}-ci-cache
       - name: Set up crust
         run: echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: Lint
-        run: |
-          echo $HOME
-          crust lint --log-format=yaml
+        run: GOLANGCI_LINT_CACHE=$HOME/.cache/golangci-lint crust lint --log-format=yaml
       - name: Build
         run: crust build --log-format=yaml
       - name: Unit testing
