--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,11 +38,11 @@ jobs:
         with:
           repository: CoreumFoundation/crust
           path: crust
-      - name: Checkout fauset
+      - name: Checkout faucet
         uses: actions/checkout@v3
         with:
-          repository: CoreumFoundation/fauset
-          path: fauset
+          repository: CoreumFoundation/faucet
+          path: faucet
       - name: Set up crust
         run: echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: Lint
