--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
-      - name: Set linter up cache
+      - name: Set linter cache
         id: cache
         uses: actions/cache@v3
         with:
@@ -39,11 +39,7 @@ jobs:
           path: crust
       - name: Set up crust
         run: echo "$(pwd)/crust/bin" >> $GITHUB_PATH
-      - name: Lint
-        run: crust lint --log-format=yaml
-      - name: Build
-        run: crust build --log-format=yaml
-      - name: Unit testing
-        run: crust test --log-format=yaml
+      - name: Lint, run unit tests and build
+        run: crust lint test build --log-format=yaml
       - name: Integration tests
         run: crust znet test --log-format=yaml
