--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,12 @@ jobs:
         with:
           path: ~/.cache/golangci-lint
           key: ${{ runner.os }}-ci-cache
+      - name: Set docker cache
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/docker
+          key: ${{ runner.os }}-docker-cache
       - name: Checkout coreum
         uses: actions/checkout@v3
         with:
@@ -40,6 +46,11 @@ jobs:
       - name: Set up crust
         run: echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: Lint, run unit tests and build
-        run: crust build lint/coreum test/coreum --log-format=yaml
+        run: |
+          docker load cored:znet < ~/.cache/docker/cored.tar
+          docker load faucet:znet < ~/.cache/docker/faucet.tar
+          crust build lint/coreum test/coreum --log-format=yaml
+          docker save cored:znet > ~/.cache/docker/cored.tar
+          docker save faucet:znet > ~/.cache/docker/faucet.tar
       - name: Integration tests
         run: crust znet test --log-format=yaml
