--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         id: cache
         uses: actions/cache@v3
         with:
-          path: ~/.cache/docker
+          path: /var/lib/docker
           key: ${{ runner.os }}-docker-cache
       - name: Checkout coreum
         uses: actions/checkout@v3
@@ -46,11 +46,6 @@ jobs:
       - name: Set up crust
         run: echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: Lint, run unit tests and build
-        run: |
-          docker load cored:znet < ~/.cache/docker/cored.tar
-          docker load faucet:znet < ~/.cache/docker/faucet.tar
-          crust build lint/coreum test/coreum --log-format=yaml
-          docker save cored:znet > ~/.cache/docker/cored.tar
-          docker save faucet:znet > ~/.cache/docker/faucet.tar
+        run: crust build lint/coreum test/coreum --log-format=yaml
       - name: Integration tests
         run: crust znet test --log-format=yaml
