--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,14 +22,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-go-
       - name: Set linter cache
+        id: cache
         uses: actions/cache@v3
         with:
           path: ~/.cache/golangci-lint
           key: ${{ runner.os }}-ci-cache
       - name: Set docker cache
+        id: cache
         uses: actions/cache@v3
         with:
-          path: /var/lib/docker
+          path: ~/.cache/docker
           key: ${{ runner.os }}-docker-cache
       - name: Checkout coreum
         uses: actions/checkout@v3
@@ -44,6 +46,9 @@ jobs:
       - name: Set up crust
         run: echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: Lint, run unit tests and build
-        run: crust build lint/coreum test/coreum --log-format=yaml
+        run: |
+          docker load -i ~/.cache/docker/crust-go-build.tar crust-go-build:latest
+          crust build lint/coreum test/coreum --log-format=yaml
+          docker save -o ~/.cache/docker/crust-go-build.tar crust-go-build:latest
       - name: Integration tests
         run: crust znet test --log-format=yaml
