--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,10 +12,11 @@ jobs:
     steps:
       - name: Go version used to build crust tool
         run: go version
-      - name: Setup go modules cache
+      - name: Setup go cache
         uses: actions/cache@v3
         with:
           path: |
+            ~/.cache/docker
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
@@ -26,11 +27,6 @@ jobs:
         with:
           path: ~/.cache/golangci-lint
           key: ${{ runner.os }}-ci-cache
-      - name: Set docker cache
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/docker
-          key: ${{ runner.os }}-docker-cache
       - name: Checkout coreum
         uses: actions/checkout@v3
         with:
@@ -45,6 +41,7 @@ jobs:
         run: echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: Lint, run unit tests and build
         run: |
+          mkdir -p ~/.cache/docker
           [ -f ~/.cache/docker/crust-go-build.tar ] && docker load -i ~/.cache/docker/crust-go-build.tar
           crust build lint/coreum test/coreum --log-format=yaml
           docker save -o ~/.cache/docker/crust-go-build.tar crust-go-build:latest
