--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,8 @@ jobs:
       - name: Lint, run unit tests and build
         run: |
           mkdir -p ~/.cache/docker
-          [ -f ~/.cache/docker/crust-go-build.tar ] && docker load -i ~/.cache/docker/crust-go-build.tar
+          [ -f ~/.cache/docker/crust-go.tar ] && docker load -i ~/.cache/docker/crust-go.tar
           crust build lint/coreum test/coreum --log-format=yaml
-          docker save -o ~/.cache/docker/crust-go-build.tar crust-go-build
+          docker save -o ~/.cache/docker/crust-go.tar crust-go-build
       - name: Integration tests
         run: crust znet test --log-format=yaml
