--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           mkdir -p ~/.cache/docker
           [ -f ~/.cache/docker/crust-go.tar ] && docker load -i ~/.cache/docker/crust-go.tar
-          docker images -q crust-go-build:e1c0506f
+          docker images
           crust build lint/coreum test/coreum images --log-format=yaml
           docker save -o ~/.cache/docker/crust-go.tar crust-go-build:e1c0506f
       - name: Integration tests
