--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Lint, run unit tests and build
         run: |
           mkdir -p ~/.cache/docker
-          [ -f ~/.cache/docker/crust-go.tar ] && docker load -i ~/.cache/docker/crust-go.tar
+          docker load -i ~/.cache/docker/crust-go.tar || true
           docker images
           crust build lint/coreum test/coreum images --log-format=yaml
           docker save -o ~/.cache/docker/crust-go.tar crust-go-build:e1c0506f
