--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,6 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/.cache/docker
             ~/.cache/go-build
             ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
@@ -27,6 +26,11 @@ jobs:
         with:
           path: ~/.cache/golangci-lint
           key: ${{ runner.os }}-ci-cache
+      - name: Set docker cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/docker
+          key: ${{ runner.os }}-docker-cache
       - name: Checkout coreum
         uses: actions/checkout@v3
         with:
@@ -45,6 +49,6 @@ jobs:
           docker load -i ~/.cache/docker/crust-go.tar || true
           docker images
           crust build lint/coreum test/coreum images --log-format=yaml
-          docker save -o ~/.cache/docker/crust-go.tar crust-go-build:e1c0506f
+          docker save -o ~/.cache/docker/crust-go.tar crust-go-build
       - name: Integration tests
         run: crust znet test --log-format=yaml
