--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
         run: |
           mkdir -p ~/.cache/docker
           docker load -i ~/.cache/docker/crust-go.tar || true
-          docker images
+          rm -rf ~/.cache/docker/crust-go-build.tar
           crust build lint/coreum test/coreum images --log-format=yaml
           docker save -o ~/.cache/docker/crust-go.tar crust-go-build
       - name: Integration tests
