--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: go version
       - name: Setup go cache
         uses: actions/cache@v3
-        if: ${{ matrix.go-cache }} == 'true'
+        if: ${{ matrix.go-cache == 'true' }}
         with:
           path: |
             ~/.cache/go-build
@@ -50,13 +50,13 @@ jobs:
             ${{ runner.os }}-go-
       - name: Set linter cache
         uses: actions/cache@v3
-        if: ${{ matrix.linter-cache }} == 'true'
+        if: ${{ matrix.linter-cache == 'true' }}
         with:
           path: ~/.cache/golangci-lint
           key: ${{ runner.os }}-ci-cache
       - name: Set docker cache
         uses: satackey/action-docker-layer-caching@v0.0.11
-        if: ${{ matrix.docker-cache }} == 'true'
+        if: ${{ matrix.docker-cache  == 'true' }}
         continue-on-error: true
       - name: Checkout coreum
         uses: actions/checkout@v3
