Add bank keeper wrapper with the integration with the asset keeper

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
             command: "crust build --log-format=yaml"
             go-cache: true
             linter-cache: false
-            docker-cache: false
+            docker-cache: true
           - ci_step: "integration tests"
             command: "crust build/integration-tests images --log-format=yaml && crust znet test --log-format=yaml"
             go-cache: true
