--- a/.github/workflows/markdown-link.yml
+++ b/.github/workflows/markdown-link.yml
@@ -11,4 +11,4 @@ jobs:
       - uses: actions/checkout@master
       - uses: gaurav-nelson/github-action-markdown-link-check@1.0.11
         with:
-          folder-path: "docs"
+          folder-path: "docs/chain"
