--- a/.github/workflows/markdown-link.yml
+++ b/.github/workflows/markdown-link.yml
@@ -12,3 +12,4 @@ jobs:
       - uses: gaurav-nelson/github-action-markdown-link-check@1.0.11
         with:
           folder-path: "docs/chain"
+          check-modified-files-only: "yes"
