--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,6 @@
 name: release
 on:
   push:
-    # FIXME REMOVE
-    branches: [ dzmitryhil/new-tags-regexp ]
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+*"
   workflow_dispatch:
@@ -25,22 +23,10 @@ jobs:
         run: echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: Build cored
         run: crust build/cored --log-format=yaml
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create asset
+        run: ln crust/bin/.cache/docker/cored/cored cored-linux-amd64
+      - name: Create release
+        uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-          draft: true
-          prerelease: true
-      - name: Upload cored-linux-amd64
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: crust/bin/.cache/docker/cored/cored/cored-linux-amd64
-          asset_name: cored-linux-amd64
-          asset_content_type: application/bin
+          token: ${{ secrets.GITHUB_TOKEN }}
+          files: cored-linux-amd64
