fetch tag on CI checkout

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           persist-credentials: false
           path: coreum
+          fetch-depth: 0
       - name: Checkout crust
         uses: actions/checkout@v3
         with:
