--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
             linter-cache: false
             docker-cache: true
 
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     steps:
       - name: Go version used to build crust tool
         run: go version
