--- a/.github/workflows/markdown-link.yml
+++ b/.github/workflows/markdown-link.yml
@@ -6,7 +6,7 @@ on:
     branches: [master]
 jobs:
   markdown-link-check:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@master
       - uses: gaurav-nelson/github-action-markdown-link-check@v1
