--- a/.github/workflows/proto.yml
+++ b/.github/workflows/proto.yml
@@ -5,7 +5,7 @@ on:
   workflow_dispatch:
 jobs:
   breaking-change:
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
       - uses: bufbuild/buf-setup-action@v1
