--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ci_step: ["lint", "test", "build", "integration tests coreum-modules"]
+        ci_step: [ "lint", "test", "build", "integration tests coreum-modules", "integration tests coreum-upgrade", "integration tests faucet" ]
         include:
           - ci_step: "lint"
             command: "crust lint/coreum --log-format=yaml"
@@ -33,18 +33,16 @@ jobs:
             go-cache: true
             linter-cache: false
             docker-cache: true
-#          - ci_step: "integration tests coreum-upgrade"
-#            command: "crust build/integration-tests images --log-format=yaml && crust znet test --test-groups=coreum-upgrade --log-format=yaml"
-#            go-cache: true
-#            linter-cache: false
-#            docker-cache: true
-#          - ci_step: "integration tests faucet"
-#            command: "crust build/integration-tests images --log-format=yaml && crust znet test --test-groups=faucet --log-format=yaml"
-#            go-cache: true
-#            linter-cache: false
-#            docker-cache: true
-
-    runs-on: [self-hosted, managed-vms]
+          - ci_step: "integration tests coreum-upgrade"
+            command: "crust build/integration-tests images --log-format=yaml && crust znet test --test-groups=coreum-upgrade --log-format=yaml"
+            go-cache: true
+            linter-cache: false
+            docker-cache: true
+          - ci_step: "integration tests faucet"
+            command: "crust build/integration-tests images --log-format=yaml && crust znet test --test-groups=faucet --log-format=yaml"
+            go-cache: true
+            linter-cache: false
+            docker-cache: true
     steps:
       - name: Go version used to build crust tool
         run: go version
@@ -84,6 +82,6 @@ jobs:
         run: "crust znet remove"
       - name: Run ${{ matrix.ci_step }}
         run: ${{ matrix.command }}
-#      - name: Dump docker logs on failure
-#        if: failure()
-#        uses: jwalton/gh-docker-logs@v2
+      - name: Dump docker logs on failure
+        if: failure()
+        uses: jwalton/gh-docker-logs@v2
