remove upgrade test from ci step as well

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ci_step: [ "lint", "test", "build", "integration tests coreum-modules", "integration tests coreum-upgrade", "integration tests faucet" ]
+        ci_step: [ 
+          "lint", 
+          "test", 
+          "build", 
+          "integration tests coreum-modules", 
+          # "integration tests coreum-upgrade", 
+          "integration tests faucet",
+        ]
         include:
           - ci_step: "lint"
             command: "crust lint/coreum --log-format=yaml"
