--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
             linter-cache: false
             docker-cache: true
           - ci_step: "integration tests coreum-modules"
-            command: "crust build/integration-tests images --log-format=yaml && crust znet test --test-groups=coreum-modules --log-format=yaml"
+            command: "crust wasm build/integration-tests images --log-format=yaml && crust znet test --test-groups=coreum-modules --log-format=yaml"
             go-cache: true
             linter-cache: false
             docker-cache: true
