--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,13 +106,16 @@ jobs:
         run: |
           echo "docker images"
           docker images
-          echo "lint cache size"
-          du -hs ~/.cache/golangci-lint
-          echo "go cache size"
-          du -hs ~/.cache/go-build
-          du -hs ~/go/pkg/mod
-          echo "wasm cache size"
-          du -hs ~/.cache/crust/wasm
+          echo "go env"
+          go env
+          echo "~/.cache/golangci-lint lint cache size"
+          [ -d ~/.cache/golangci-lint ] && du -hs ~/.cache/golangci-lint
+          echo "~/.cache/go-build cache size"
+          [ -d ~/.cache/go-build ] && du -hs ~/.cache/go-build
+          echo "~/go/pkg/mod cache size"
+          [ -d ~/go/pkg/mod ] && du -hs ~/go/pkg/mod
+          echo "~/.cache/crust/wasm cache size"
+          [ -d ~/.cache/crust/wasm ] && du -hs ~/.cache/crust/wasm
 
       - name: Run ${{ matrix.ci_step }}
         run: ${{ matrix.command }}
