--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,8 +112,8 @@ jobs:
           [ -d ~/.cache/golangci-lint ] && du -hs ~/.cache/golangci-lint
           echo "~/.cache/go-build cache size"
           [ -d ~/.cache/go-build ] && du -hs ~/.cache/go-build
-          echo "~/go/pkg/mod cache size"
-          [ -d ~/go/pkg/mod ] && du -hs ~/go/pkg/mod
+          echo "~/.cache/go/pkg/mod cache size"
+          [ -d ~/.cache/go/pkg/mod ] && du -hs ~/.cache/go/pkg/mod
           echo "~/.cache/crust/wasm cache size"
           [ -d ~/.cache/crust/wasm ] && du -hs ~/.cache/crust/wasm
 
