--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,18 @@ jobs:
     steps:
       - name: Go version used to build crust tool
         run: go version
+      - name: Checkout coreum
+        uses: actions/checkout@v3
+        with:
+          persist-credentials: false
+          path: coreum
+      - name: Checkout crust
+        uses: actions/checkout@v3
+        with:
+          repository: CoreumFoundation/crust
+          path: crust
+      - name: Set up crust
+        run: echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: Setup go cache
         uses: actions/cache@v3
         if: ${{ matrix.go-cache }}
@@ -68,7 +80,7 @@ jobs:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          key: ${{ runner.os }}-go-${{ hashFile('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-
       - name: Setup WASM cache
@@ -89,18 +101,6 @@ jobs:
         uses: satackey/action-docker-layer-caching@v0.0.11
         if: ${{ matrix.docker-cache }}
         continue-on-error: true
-      - name: Checkout coreum
-        uses: actions/checkout@v3
-        with:
-          persist-credentials: false
-          path: coreum
-      - name: Checkout crust
-        uses: actions/checkout@v3
-        with:
-          repository: CoreumFoundation/crust
-          path: crust
-      - name: Set up crust
-        run: echo "$(pwd)/crust/bin" >> $GITHUB_PATH
 
       - name: Print cache # FIXME remove
         run: |
