--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
         if: ${{ matrix.wasm-cache }}
         with:
           path: ~/.cache/crust/wasm
-          key: ${{ runner.os }}-wasm-cache
+          key: ${{ runner.os }}-wasm-cache-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: |
             ${{ runner.os }}-wasm-cache
       - name: Setup linter cache
@@ -102,7 +102,7 @@ jobs:
         if: ${{ matrix.docker-cache }}
         continue-on-error: true
         with:
-          key: ${{ runner.os }}-docker-${{ hashFiles('**/go.sum') }}
+          key: ${{ runner.os }}-docker-${{ hashFiles('**/go.sum') }} # FIXME discuss with team, each time we change the sum the cache will be invalidated
           restore-keys: |
             ${{ runner.os }}-docker-
       - name: Run ${{ matrix.ci_step }}
