--- a/integration-tests/ibc/testdata/wasm/ibc-call/Cargo.toml
+++ b/integration-tests/ibc/testdata/wasm/ibc-call/Cargo.toml
@@ -1,13 +1,8 @@
 [package]
-name = "simple-state"
+name = "ibc-call"
 version = "0.1.0"
 authors = ["Coreum"]
 edition = "2021"
-
-exclude = [
-  "simple_state.wasm",
-  "checksums.txt",
-]
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -28,14 +23,11 @@ backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
-cosmwasm-std = "1.0.0"
-cosmwasm-storage = "1.0.0"
-cw-storage-plus = "0.13.2"
-cw2 = "0.13.2"
-schemars = "0.8.8"
-serde = { version = "1.0.137", default-features = false, features = ["derive"] }
+cosmwasm-std = { version = "1.2.2", features = ["ibc3"] }
+cosmwasm-schema = "1.2.2"
+cw-storage-plus = "1.0.1"
+cw2 = "1.0.1"
 thiserror = { version = "1.0.31" }
 
 [dev-dependencies]
-cosmwasm-schema = "1.0.0"
-cw-multi-test = "0.13.2"
+cw-multi-test = "0.16.2"
