--- a/.github/workflows/proto-doc-diff-check.yml
+++ b/.github/workflows/proto-doc-diff-check.yml
@@ -21,6 +21,16 @@ jobs:
         run: echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: update crust
         run: crust build/crust
+      - name: Debug
+        run: |
+          pwd
+          echo ${GOPATH}
+          echo ${GOROOT}
+          ls /home/runner
+          ls /home/runner/go
+          ls /home/runner/go/pkg
+          ls /home/runner/go/pkg/mod
+          ls /home/runner/go/pkg/mod/github.com
       - name: Generate proto docs
         run: crust proto/coreum --log-format=yaml
       - name: check git diff
